<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>spring-support-parent-starter</artifactId>
        <version>4.0.0</version>
    </parent>

    <artifactId>spring-support-monitor-server-starter</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-monitor-client-starter</artifactId>
        </dependency>


        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-redis-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-ssh-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-oauth-client-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-socketio-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-mybatis-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-swagger-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-zbus-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
            <version>2.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cn.smallbun.screw</groupId>
            <artifactId>screw-core</artifactId>
            <version>1.0.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>utils-support-netty-starter</artifactId>
            <version>4.0.0</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

</project>